Fixing an issue with buttons not being responsive on mobile devices (#101)
* Fixing an issue with buttons not being responsive on mobile devices

* Making "commits" table on about page responsive

--- a/site/assets/css/app.scss
+++ b/site/assets/css/app.scss
@@ -26,54 +26,9 @@ body {
 	background-color: transparent;
 }
 
-.jumbotron .btn {
-	font-size: 21px;
-	padding: 14px 24px;
-}
-
 .not-set {
 	color: #c55;
 	font-style: italic;
-}
-
-/* add sorting icons to gridview sort links */
-a.asc:after, a.desc:after {
-	position: relative;
-	top: 1px;
-	display: inline-block;
-	font-family: 'Glyphicons Halflings';
-	font-style: normal;
-	font-weight: normal;
-	line-height: 1;
-	padding-left: 5px;
-}
-
-a.asc:after {
-	content: /*"\e113"*/ "\e151";
-}
-
-a.desc:after {
-	content: /*"\e114"*/ "\e152";
-}
-
-.sort-numerical a.asc:after {
-	content: "\e153";
-}
-
-.sort-numerical a.desc:after {
-	content: "\e154";
-}
-
-.sort-ordinal a.asc:after {
-	content: "\e155";
-}
-
-.sort-ordinal a.desc:after {
-	content: "\e156";
-}
-
-.grid-view th {
-    white-space: nowrap;
 }
 
 .hint-block {
@@ -90,16 +45,32 @@ a.desc:after {
 	margin: 0 0 15px 0;
 }
 
-#checkin-form .btn {margin-bottom: 4px;}
-#checkin-form .control-label {font-size: 16px;}
-.datepicker {width: 125px;}
-#ui-datepicker-div {z-index: 1050 !important;}
-#spinner {text-align: center;}
-
+#checkin-form {
+  .btn {
+    white-space: normal;
+    margin-bottom: 4px;
+  }
+  .control-label {
+    font-size: 16px;
+  }
+  .datepicker {
+    width: 125px;
+  }
+}
+.well {
+  button.btn {
+    white-space: normal;
+  }
+}
+#ui-datepicker-div {
+  z-index: 1050 !important;
+}
+#spinner {
+  text-align: center;
+}
 .caption h3 {
   margin-top: 0px;
 }
-
 .navbar-brand h1 {
   font-size: inherit;
   margin: inherit;
@@ -108,11 +79,9 @@ a.desc:after {
   font-weight: inherit;
   font-height: inherit;
 }
-
 #profile-button {
   width: 100px;
 }
-
 .indent {
   margin-left: 10px;
 }
